Fixed listing detail header on mobile

--- a/containers/ListingDetailHeader/ListingDetailHeader.module.css
+++ b/containers/ListingDetailHeader/ListingDetailHeader.module.css
@@ -2,7 +2,7 @@
 
 .header {
   display: grid;
-  grid-template-columns: auto 1fr auto;
+  grid-template-columns: 1fr auto;
   align-items: center;
   justify-content: space-between;
   padding: 1rem .2rem 0 1rem;
